manifests/geoclient-v2-prd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /geoclient/v$1/$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    release-scope: ingress-only
  labels:
    app: geoclient-v2
    environment: production
  name: geoclient-v2
  namespace: gis-apps
spec:
  ingressClassName: nginx
  rules:
  - host: geoclient.nyc.gov
    http:
      paths:
      - backend:
          service:
            name: geoclient-v2-blue
            port:
              number: 80
        path: /geoclient/v(2)/(.*)
        pathType: Prefix
  tls:
  - hosts:
    - geoclient.nyc.gov
    secretName: geoclient.nyc.gov-secret
